# Agent-QA

./: .env.example  .gitignore  README.md  pyproject.toml
client/: index.html  package-lock.json  package.json  vite.config.js
client/src/: App.vue  main.js  style.css
client/src/api/: index.js  request.js
client/src/layout/: MainLayout.vue
client/src/router/: index.js
client/src/store/: user.js
client/src/views/: Chat.vue  Documents.vue  Home.vue  Login.vue  Users.vue
eval_docs/: 微服务接口文档-库存服务INV-SVC.md  微服务接口文档-支付服务PAY-SVC.md  微服务接口文档-订单服务ORD-SVC.md  数据中心运维手册-IDC-BJ-01.docx  数据中心运维手册-IDC-GZ-03.docx  数据中心运维手册-IDC-SH-02.docx  灵犀智能客服平台-v3.1发布说明.txt  灵犀智能客服平台-v3.2发布说明.txt  灵犀智能客服平台-v4.0发布说明.txt
scripts/: eval_retrieval.py  gen_eval_docs.py  gen_test_docs.py
server/: __init__.py  main.py
server/api/: auth.py  chat.py  documents.py  stats.py  users.py
server/core/: __init__.py  config.py  database.py  deps.py  security.py
server/models/: __init__.py  chat.py  document.py  user.py
server/schemas/: __init__.py  chat.py  common.py  document.py  user.py
server/services/: __init__.py  agent_service.py  llm.py  middleware.py  rag_service.py
server/sql/: init.sql
test_docs/: IT账号与密码安全规范.txt  信息安全与数据保密制度.txt  公司简介与组织架构.md  办公设备领用与使用说明.txt  员工手册.docx  差旅报销管理办法.docx  常见问题FAQ汇总.md  考勤与休假管理制度.docx  远程办公与VPN使用指南.md
