[project]
name = "rag-qa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb==1.5.9",
    "dashscope>=1.25.22",
    "fastapi>=0.137.2",
    "jieba>=0.42.1",
    "langchain>=1.3.9",
    "langchain-anthropic>=1.4.6",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-deepseek>=1.1.0",
    "langchain-mineru>=0.1.3",
    "langchain-openai>=1.3.2",
    "langchain-tavily>=0.2.18",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "pydantic-settings>=2.14.1",
    "pymysql>=1.2.0",
    "pypdf>=6.13.3",
    "python-docx>=1.2.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "rank-bm25>=0.2.2",
    "uvicorn[standard]>=0.49.0",
]

# 使用 uv 托管的独立 CPython，避免 Anaconda 环境下原生库（chromadb/onnxruntime）DLL 冲突导致崩溃
[tool.uv]
python-preference = "only-managed"

[dependency-groups]
dev = [
    "reportlab>=4.5.1",
]
